chore: fix deprecated URL